--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,49 @@
-node_modules
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 .pnpm-store
+
+# Build output
+build/
+dist/
+.tmp/
+*.log
+
+# Testing and coverage
+coverage/
+.nyc_output/
+.pytest_cache/
+.coverage*
+
+# Environment and credentials
 .env
 .env.*
 !.env.example
 !**/.env.example
+
+# Editors and OS
 .DS_Store
-coverage
-build
-dist
-*.pyc
-__pycache__
-.venv
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+.venv/
+.eggs/
+
+# Static type checkers
+.mypy_cache/
+.pyre/
+.pytype/
+.ruff_cache/
+
+# Others
+*.tgz
+*.tsbuildinfo
