Add docker packaging and deployment tooling

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -1,3 +1,12 @@
-CLOUD_PROVIDER=aws
-CLOUD_REGION=us-east-1
-RESOURCE_PREFIX=stitch-dentistry
+# Database
+POSTGRES_USER=dentistry
+POSTGRES_PASSWORD=dentistry
+POSTGRES_DB=dentistry
+
+# API runtime
+API_PORT=8000
+API_DEBUG=true
+
+# Frontend build
+VITE_API_URL=http://localhost:8000
+VITE_APP_NAME=StitchDentistryWeb
