--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,64 @@ jobs:
         run: pytest
       - name: Build check
         run: python -m compileall src
+
+  docker-images:
+    name: Build and publish images (${{ matrix.service }})
+    runs-on: ubuntu-latest
+    needs: [node-projects, api]
+    strategy:
+      matrix:
+        include:
+          - service: api
+            context: stitch_dentistry_search/api
+            dockerfile: stitch_dentistry_search/api/Dockerfile
+            image: ghcr.io/${{ github.repository_owner }}/dentistry-api
+            build-args: ""
+          - service: frontend
+            context: stitch_dentistry_search/web
+            dockerfile: stitch_dentistry_search/web/Dockerfile
+            image: ghcr.io/${{ github.repository_owner }}/dentistry-frontend
+            build-args: |
+              VITE_API_URL=${{ vars.FRONTEND_API_URL || 'http://dentistry-api.default.svc.cluster.local:8000' }}
+              VITE_APP_NAME=${{ vars.FRONTEND_APP_NAME || 'StitchDentistryWeb' }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push ${{ matrix.service }} image
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.context }}
+          file: ${{ matrix.dockerfile }}
+          push: ${{ github.event_name == 'push' }}
+          tags: |
+            ${{ matrix.image }}:latest
+            ${{ matrix.image }}:${{ github.sha }}
+          build-args: ${{ matrix.build-args }}
+
+  manifests:
+    name: Validate manifests
+    runs-on: ubuntu-latest
+    needs: [node-projects, api]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Helm
+        uses: azure/setup-helm@v4
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: "v1.30.0"
+      - name: Helm lint
+        run: helm lint infra/helm/dentistry-registry
+      - name: Helm template sanity check
+        run: helm template test-release infra/helm/dentistry-registry > /tmp/dentistry-rendered.yaml
+      - name: Kustomize validation
+        run: |
+          kubectl kustomize infra/k8s > /tmp/kustomized.yaml
+          kubectl apply --dry-run=client -f /tmp/kustomized.yaml
