--- a/stitch_dentistry_search/api/pyproject.toml
+++ b/stitch_dentistry_search/api/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
   "fastapi==0.110.0",
   "uvicorn[standard]==0.29.0",
   "pydantic-settings==2.2.1",
-  "sqlmodel==0.0.16"
+  "sqlmodel==0.0.16",
+  "psycopg[binary]==3.1.18"
 ]
 
 [project.optional-dependencies]
